welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:55: error: not found: value faireFleur
faireFleur(Color.BLUE)
^